@@ -2,7 +2,8 @@
 ==========================
 
 - Let the grid be unselected by pressing escape or clicking outside
-- Update tab and ctrl+keys to cycle through cells linearly (#5)
+- Update ctrl+keys to cycle through cells linearly (#5)
+- Update tab behavior to cycle through the grid only once (#5)
 - Update earmark highlighting to the new accent color palette
 - Add strike-through for earmark warnings
 - Add pause animation
